--- a/ServletHolaMundo/build.xml
+++ b/ServletHolaMundo/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Ejemplo1" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Ejemplo1.</description>
+<project name="ServletHolaMundo" default="default" basedir=".">
+    <description>Builds, tests, and runs the project ServletHolaMundo.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
